test/types/errors/assignTypes3.chpl
type t = int;

t = real;
