test/types/errors/assignTypes3.good
assignTypes3.chpl:3: error: illegal assignment to type
